:bug: - Patched modal overflows

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -134,8 +134,11 @@ body {
 	display: grid;
 	grid-template-columns: 50% 50%;
 	gap: 20px;
-	max-width: 100%;
 	padding: 30px;
+	max-width: 100%;
+	max-height: 60vh;
+	overflow-y: scroll; 
+	overflow-x: hidden;
 }
 .modal-content > div {
 	border: solid 1px #ffffff;
